# game-template

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
src/: components.rs  error.rs  input.rs  log.rs  main.rs  resources.rs  systems.rs  types.rs  util.rs  world.rs
src/scenes/: level.rs  menu.rs  mod.rs
