[package]
name = "ggez_game_template"
version = "0.1.0"
authors = ["Simon Heath <icefoxen@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[profile.dev]
opt-level = 1


[dependencies]
ggez = "0.5.0-rc.1"
ggez-goodies = { git = "https://github.com/ggez/ggez-goodies.git", branch="devel" }
euclid = {version = "0.19", features=["mint"]}
warmy = "0.11"
log = "0.4"
fern = {version = "0.5", features = ["colored"] }
chrono = "0.4"
specs = "0.14"
specs-derive = "0.4"
